fixed major draggable bug that would cause div to jump off screen also include visual feed back to inform user of changes they made

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -93,11 +93,6 @@ html, body {
 #message{
   background-color: transparent;
 }
-.move{
-  position:fixed !important;
-  width:auto;
-  height:auto;
-}
 .example{
   background-color: black;
   color: white;
